Add wal_keep_segments option

--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -233,7 +233,7 @@ checkpoint_warning = {{postgresql_checkpoint_warning}}		# 0 disables
 
 #max_wal_senders = 10		# max number of walsender processes
 				# (change requires restart)
-#wal_keep_segments = 0		# in logfile segments, 16MB each; 0 disables
+wal_keep_segments = {{ postgresql_wal_keep_segments }}		# in logfile segments, 16MB each; 0 disables
 #wal_sender_timeout = 60s	# in milliseconds; 0 disables
 
 #max_replication_slots = 10	# max number of replication slots
