--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -257,10 +257,10 @@ wal_keep_segments = {{ postgresql_wal_keep_segments }}		# in logfile segments, 1
 
 #hot_standby = on			# "off" disallows queries during recovery
 					# (change requires restart)
-#max_standby_archive_delay = 30s	# max delay before canceling queries
+max_standby_archive_delay = {{ postgresql_max_standby_archive_delay }}	# max delay before canceling queries
 					# when reading WAL from archive;
 					# -1 allows indefinite delay
-#max_standby_streaming_delay = 30s	# max delay before canceling queries
+max_standby_streaming_delay = {{ postgresql_max_standby_streaming_delay }}	# max delay before canceling queries
 					# when reading streaming WAL;
 					# -1 allows indefinite delay
 #wal_receiver_status_interval = 10s	# send replies at least this often
@@ -547,7 +547,7 @@ cluster_name = '{{ postgresql_cluster_name }}'			# added to process titles if no
 #default_transaction_read_only = off
 #default_transaction_deferrable = off
 #session_replication_role = 'origin'
-#statement_timeout = 0			# in milliseconds, 0 is disabled
+statement_timeout = '{{ postgresql_statement_timeout }}'			# in milliseconds, 0 is disabled
 #lock_timeout = 0			# in milliseconds, 0 is disabled
 #idle_in_transaction_session_timeout = 0	# in milliseconds, 0 is disabled
 #vacuum_freeze_min_age = 50000000
