Configure postgres slowlog

--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -428,6 +428,7 @@ max_standby_streaming_delay = {{ postgresql_max_standby_streaming_delay }}	# max
 					# statements running at least this number
 					# of milliseconds
 
+log_min_duration_statement = {{ postgresql_log_min_duration_statement }}
 
 # - What to Log -
 
