--- a/templates/postgresql-10.conf.j2
+++ b/templates/postgresql-10.conf.j2
@@ -325,7 +325,7 @@ max_standby_streaming_delay = {{ postgresql_max_standby_streaming_delay }}	# max
 
 # - Other Planner Options -
 
-#default_statistics_target = 100	# range 1-10000
+default_statistics_target = {{postgresql_default_statistics_target}}	# range 1-10000
 #constraint_exclusion = partition	# on, off, or partition
 #cursor_tuple_fraction = 0.1		# range 0.0-1.0
 #from_collapse_limit = 8
